# SekigaeService

./: .eslintrc.js  .gitignore  .markdownlint.yaml  .prettierrc  Pipfile  README.md  docker-compose.yml  env.sh  package-lock.json  package.json  requirements.txt  setup.cfg
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: -------.md  -----.md  BUG_FIX.md  BUG_REPORT.md  FEATURE.md
django/: Dockerfile  entrypoint.sh  manage.py  requirements.txt  uwsgi.ini
django/account/: admin.py  models.py  urls.py  views.py
django/config/: urls.py  wsgi.py
fastapi/: Dockerfile  entrypoint.sh  pyproject.toml
fastapi/api/models/: __init__.py  base.py  user.py
fastapi/app/: main.py
fastapi/app/api/v1/: __init__.py  user.py
fastapi/app/crud/: __init__.py  base.py  user.py
fastapi/app/cruds/: user.py
fastapi/app/db/: alembic.ini  database.py  seed.py
fastapi/app/db/migrations/: env.py
fastapi/app/db/migrations/versions/: 20211125_183627_user.py
fastapi/app/middlwares/: __init__.py  db_session.py  http_request.py
fastapi/app/models/: __init__.py  base.py
fastapi/app/routers/: user.py
fastapi/app/routers/v1/: __init__.py  user.py
fastapi/app/schemas/: __init__.py  user.py
fastapi/db/: database.py  seed.py
fastapi/db/migrations/: env.py
fastapi/db/migrations/versions/: 20211115_115025_.py  20211116_112109_user.py
frontend/: .babelrc  .eslintrc.json  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
nginx/: Dockerfile  nginx.conf
postgres/: Dockerfile  README.md
(+80 files in other folders)
