[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["kathmandu777"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
SQLAlchemy = "^1.4.27"
aiomysql = "^0.0.21"
psycopg2-binary = "^2.9.2"
alembic = {extras = ["tz"], version = "^1.7.5"}
SQLAlchemy-Utils = "^0.37.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
